--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^3.0.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "csv-parse": "^5.5.3",
     "express": "^4.18.2"
   }
 }
